--- a/.eslintrc
+++ b/.eslintrc
@@ -3,25 +3,19 @@
 env:
   es6: true
   node: true
+  mocha: true
 extends:
   - eslint:recommended
-installedESLint: true
 rules:
-  indent:
-    - error
-    - tab
-  linebreak-style:
-    - error
-    - unix
-  semi:
-    - error
-    - always
-  quotes:
-    - error
-    - double
-    - avoidEscape: true
+  indent: [ error, tab, {
+    MemberExpression: off
+  } ]
+  linebreak-style: [ error, unix ]
+  semi: [ error, always ]
+  quotes: [ error, double, { avoidEscape: true } ]
   no-mixed-spaces-and-tabs: error
   space-before-blocks: error
+  keyword-spacing: [ error, { before: true } ]
   arrow-spacing: error
   key-spacing: [ error, { afterColon: true, mode: minimum } ]
   brace-style: [ error, stroustrup ]
@@ -30,3 +24,6 @@ rules:
   array-bracket-spacing: off # [ error, always, { singleValue: false } ]
   computed-property-spacing: [ error, never ]
   object-curly-spacing: [ error, always ]
+  prefer-const: error
+  no-var: error
+  no-unused-vars: [ error, { vars: all, args: none, ignoreRestSiblings: true } ]
