--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2"
   },
+  "peerDependencies": {
+    "serverless": "1.x || 2.x"
+  },
   "prettier": {
     "printWidth": 120,
     "tabWidth": 2,
