--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.20"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "^7.10.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2"
