--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-export-env",
-  "version": "1.4.4",
+  "version": "2.0.0",
   "description": "Serverless plugin to export environment variables into a .env file",
   "main": "src/index.js",
   "author": "Andre Rabold",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/arabold/serverless-export-env",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "cfn-resolver-lib": "^1.1.7",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
