chore: Mark plugin as Serverless Framework v3 ready

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prettier": "^2.1.2"
   },
   "peerDependencies": {
-    "serverless": "1.x || 2.x"
+    "serverless": "1 || 2 || 3"
   },
   "prettier": {
     "printWidth": 120,
