--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "eslint": "^7.10.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^8.17.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.1.2"
   },
   "peerDependencies": {
-    "serverless": "1 || 2 || 3"
+    "serverless": ">=2"
   },
   "prettier": {
     "printWidth": 120,
