--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "bugs": {
     "url": "https://github.com/arabold/serverless-export-env/issues"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "homepage": "https://github.com/arabold/serverless-export-env",
   "dependencies": {
     "bluebird": "^3.7.2",
